--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ p {
 }
 
 .singleProjectHeader h1 {
-  font-family: var(--section-header-size)
+  font-family: var(--section-header-size);
   font-size: 3rem;
   line-height: 65px;
   letter-spacing: 4px;
