--- a/style.css
+++ b/style.css
@@ -317,11 +317,11 @@ p {
 }
 
 .singleProjectHeader h1 {
-  font-family: var(--section-header-size);
-  font-size: 3rem;
+  font-family: "Playfair Display", serif;
+  font-size: var(--large-header-size);
   line-height: 65px;
   letter-spacing: 4px;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
 }
 
