--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ a:visited {
 .heroSubText {
   max-width: 35ch;
   font-family: "Poppins", serif;
-
+  line-height: 25px;
   margin-top: 1rem;
   opacity: var(--medium-emph-text);
   font-size: var(--h1-subtext);
