--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ body {
   font-size: var(--navbar-size);
 }
 
+a:focus {
+  outline: white;
+  box-shadow: none;
+}
+
+button:focus {
+  outline: white;
+  box-shadow: none;
+}
+
 .line {
   width: 30px;
   height: 3px;
@@ -214,7 +224,7 @@ a:visited {
 .heroSubText {
   max-width: 35ch;
   font-family: "Poppins", serif;
-  line-height: 25px;
+  line-height: 30px;
   margin-top: 1rem;
   opacity: var(--medium-emph-text);
   font-size: var(--h1-subtext);
@@ -586,7 +596,7 @@ h4 {
 .numberFlexWrap {
   top: -2rem;
   left: 3rem;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .numberFlexWrap p {
@@ -606,7 +616,7 @@ h4 {
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 30ch;
+  max-width: 35ch;
 }
 
 .textWrap p {
@@ -939,7 +949,7 @@ h4 {
   .numberFlexWrap {
     top: -2.3rem;
     left: 6rem;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .frontHeroContainer {
@@ -1153,6 +1163,10 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+
+  .numberFlexWrap {
+    max-width: 40ch;
   }
 }
 
@@ -1407,13 +1421,6 @@ h3 {
   .resume {
     margin-inline: var(--desktop-margin);
   }
-
-  /* 
-  .protoButton span:hover::before,
-  .protoButton span:focus::before {
-    width: 100%;
-    transition: 0.2s ease all 0.3s;
-  } */
 
   .educationContainer {
     left: 9rem;
