--- a/style.css
+++ b/style.css
@@ -808,6 +808,10 @@ h4 {
   .moonSolution {
     margin-inline: var(--tablet-margin);
   }
+
+  .cardDescription {
+    max-width: 45ch;
+  }
 }
 
 /* ---------------------------------Desktop query ----------------------------------*/
@@ -851,6 +855,7 @@ h4 {
     overflow: hidden;
     align-items: center;
     transition: all 1s;
+    padding-top: 1rem;
   }
 
   .frontButton svg {
@@ -1091,13 +1096,6 @@ h4 {
     display: flex;
     justify-content: center;
     margin-inline: 10rem;
-  }
-
-  .singleProject {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10rem;
-    margin-block: 3rem;
   }
 }
 
